# romea-core-lidar

./: .gitlab-ci.yml  CMakeLists.txt  package.xml  romea_lidar.repos  romea_lidar.rosinstall  romea_lidar_public.repos
include/romea_core_lidar/: LIDAR2D.hpp  LIDAR2DFrameBuilder.hpp  LIDAR2DFrameBuilderBase.hpp  LIDAR2DUndistortedFrameBuilder.hpp  LIDAR3D.hpp  LIDAR3DFrameBuilder.hpp  LIDAR3DFrameBuilderBase.hpp  LIDAR3DUndistortedFrameBuilder.hpp  LIDARFrameFeatures.hpp  LIDARPose.hpp  LIDARUndistortedFrame.hpp
include/romea_lidar/: LIDAR2D.hpp  LIDAR2DFrameBuilder.hpp  LIDAR2DUndistortedFrameBuilder.hpp  LIDAR3DFrameBuilder.hpp  LIDAR3DFrameBuilderBase.hpp  LIDAR3DUndistortedFrameBuilder.hpp  LIDARFrameFeatures.hpp  LIDARPose.hpp  LIDARUndistortedFrame.hpp
src/: LIDAR2D.cpp  LIDAR2DFrameBuilder.cpp  LIDAR2DFrameBuilderBase.cpp  LIDAR2DUndistortedFrameBuilder.cpp  LIDAR3D.cpp  LIDAR3DFrameBuilder.cpp  LIDAR3DFrameBuilderBase.cpp  LIDAR3DUndistortedFrameBuilder.cpp  LIDARPose.cpp
